# gmutils

./: .gitignore  .refactor-handoff.md  .refactor-plan.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  changelog  fake_ssh.sh  genmeta-ssh.bat  genmeta-ssh.sh  homebrew.sh
.cargo/: config.toml
.github/workflows/: publish-crates.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: f2-quality.txt  task-1-cargo-check.txt  task-2-help.txt  task-3-route-tests.txt  task-5-check.txt  task-6-check.txt  task-7-check.txt  task-8-genmeta-proxy-help.txt  task-9-qa.txt
.sisyphus/evidence/final-qa/: SUMMARY.md  proxy-log.txt  s1-plain-http-non-genmeta.txt  s2-connect-tunnel.txt  s3-genmeta-connect-502.txt  s4-genmeta-plain-http.txt  s5-malformed.txt
.sisyphus/notepads/genmeta-proxy-phase1/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: genmeta-proxy-phase1.md
genmeta/: Cargo.toml  homebrew_content.rb
genmeta-access/: Cargo.toml
genmeta-access/src/: cli.rs  lib.rs
genmeta-access/tests/: cli.rs
genmeta-common/: Cargo.toml  build.rs
genmeta-common/src/: bind.rs  cbor_codec.rs  connect.rs  dns.rs  entry_guard.rs  error.rs  h3_client.rs  home.rs  id.rs  identity.rs  lib.rs
genmeta-common/src/bind/: collection.rs  host.rs  mod.rs  pattern.rs  setup.rs  tests.rs
genmeta-common/src/home/: identity.rs
genmeta-common/src/home/identity/: default.rs  fs.rs
genmeta-common/src/identity/: config.rs
genmeta-curl/: Cargo.toml
genmeta-curl/src/: lib.rs  main.rs
genmeta-discover/: Cargo.toml
genmeta-discover/src/: lib.rs  main.rs
genmeta-doctor/: Cargo.toml
genmeta-doctor/src/: lib.rs  main.rs
genmeta-home/: Cargo.toml
genmeta-home/src/: identity.rs  lib.rs
genmeta-home/src/identity/: default.rs  fs.rs
genmeta-identity/: Cargo.toml  build.rs
genmeta-identity/src/: auth.rs  bootstrap.rs  cert_server.rs  checkout.rs  cli.rs  lib.rs  local_identity.rs  main.rs
genmeta-identity/src/cli/: flow.rs  prompt.rs  validator.rs
genmeta-identity/src/cli/flow/: apply.rs  approval.rs  create.rs  default_identity.rs  device.rs  email.rs  epilogue.rs  kind.rs  local.rs  output.rs  progress.rs  recovery.rs  renew.rs  target.rs  transcript.rs  welcome.rs
genmeta-identity/tests/fixtures/: valid.der
genmeta-nat/: Cargo.toml
genmeta-nat/src/: lib.rs  main.rs
genmeta-nslookup/: Cargo.toml
genmeta-nslookup/src/: lib.rs  main.rs
genmeta-profile/: Cargo.toml
genmeta-profile/src/: lib.rs  main.rs
genmeta-proxy/: Cargo.toml
genmeta-proxy/src/: forward.rs  h3_forward.rs  lib.rs  main.rs  route.rs  tunnel.rs
genmeta-request/: Cargo.toml
genmeta-request/src/: imp.rs  lib.rs  main.rs
genmeta-ssh/: Cargo.toml
genmeta-ssh/src/: config.rs  connect.rs  forward.rs  imp.rs  lib.rs  main.rs  ssh_config.rs
genmeta-ssh3/: Cargo.toml
genmeta-ssh3/src/: auth.rs  config.rs  connect.rs  error.rs  forward.rs  lib.rs  main.rs  mux.rs  session.rs  socks.rs  ssh_config.rs  terminal.rs
genmeta-ssh3/src/config/: parser.rs
genmeta-ssh3/src/forward/: parser.rs  types.rs
genmeta/src/: main.rs
pkg/debian/: .gitignore  rules
scripts/: deb.sh
ssh-config/: Cargo.toml
ssh-config/src/: ast.rs  error.rs  genmeta.rs  lib.rs  openssh.rs  parse.rs  path.rs  pattern.rs
ssh3-proto/: Cargo.toml
ssh3-proto/src/: forward.rs  lib.rs  listener.rs  messages.rs  mux.rs  socks.rs
xtask/: Cargo.toml  release.toml
xtask/deb/: control  copyright  rules
xtask/release/brew/: gmutils.sh
xtask/release/deb/: Dockerfile  package.sh
xtask/release/rpm/: Dockerfile  package.sh
xtask/release/scoop/: gmutils.sh
xtask/src/: brew.rs  container.rs  deb.rs  main.rs  package.rs  publish.rs  release.rs  release_contract.rs  rpm.rs  scoop.rs  template.rs  version_cmp.rs
xtask/src/package/: brew.rs  deb.rs  manifest.rs  prompt.rs  rpm.rs  scoop.rs
xtask/src/publish/: s3.rs
xtask/src/publish/s3/: brew.rs  deb.rs  key.rs  plan.rs  rpm.rs  scoop.rs
xtask/src/release/: apt.rs  artifact.rs  grouped.rs  homebrew.rs  paths.rs  ppa.rs  rpm.rs  s3.rs  scoop.rs  tap.rs  verify.rs
xtask/templates/: gmutils.json.in  gmutils.rb.in
