
[workspace]
resolver = "3"
members = [
    "genmeta",
    "genmeta-access",
    "genmeta-curl",
    "genmeta-ssh",
    "genmeta-nslookup",
    "genmeta-discover",
    "genmeta-nat",
    "genmeta-doctor",
    "genmeta-identity",
    "genmeta-proxy",
    "xtask",
]

[workspace.dependencies]
# async
futures = "0.3"
daemonize = "0.5"
tokio = { version = "1", features = ["full"] }

# cli
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
indicatif = "0.18"
whoami = "2"

# network
h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint" }
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "gzip",
    "json",
    "zstd",
    "rustls-no-provider",
] }

# security
rankey = { git = "https://github.com/genmeta/rankey.git", rev = "70d1b5d8ce2ec2c0244356a02d19e038482956b3" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
x509-parser = "0.18"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tracing
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-indicatif = { version = "0.3" }

# utils
base64 = "0.22"
bytes = "1"
crossterm = { version = "0.29" }
dirs = { version = "6" }
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
snafu = "0.9"
socket2 = "0.6"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
    "deflate",
    "zstd",
] }

# workspace
dhttp-access = { git = "https://github.com/genmeta/dhttp.git", branch = "main" }
genmeta-access = { path = "genmeta-access" }
dhttp = { git = "https://github.com/genmeta/dhttp.git", branch = "main" }
dhttp-home = { git = "https://github.com/genmeta/dhttp.git", branch = "main" }
dhttp-identity = { git = "https://github.com/genmeta/dhttp.git", branch = "main" }
genmeta-curl = { path = "genmeta-curl" }
genmeta-discover = { path = "genmeta-discover" }
genmeta-doctor = { path = "genmeta-doctor" }
genmeta-identity = { path = "genmeta-identity" }
genmeta-nat = { path = "genmeta-nat" }
genmeta-nslookup = { path = "genmeta-nslookup" }
genmeta-ssh = { path = "genmeta-ssh" }
genmeta-proxy = { path = "genmeta-proxy" }

# ssh
dssh = { git = "https://github.com/genmeta/dssh.git", branch = "endpoint", features = [
    "config",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true


# Local patches are root-only and keep this workspace buildable while provider
# branch heads for the dependency rename/consolidation commits are not yet
# published remotely.
[patch."https://github.com/genmeta/dhttp.git"]
dhttp = { path = "../dhttp/dhttp" }
dhttp-home = { path = "../dhttp/home" }
dhttp-identity = { path = "../dhttp/identity" }
dhttp-access = { path = "../dhttp/access" }

[patch."https://github.com/genmeta/ddns.git"]
ddns = { path = "../ddns" }

[patch."https://github.com/genmeta/h3x.git"]
h3x = { path = "../h3x" }

[patch."https://github.com/genmeta/dssh.git"]
dssh = { path = "../dssh" }

[patch."https://github.com/genmeta/dquic.git"]
dquic = { path = "../dquic/dquic" }
