
[workspace]
resolver = "3"
members = [
    "genmeta",
    "genmeta-access",
    "genmeta-curl",
    "genmeta-ssh",
    "genmeta-nslookup",
    "genmeta-discover",
    "genmeta-nat",
    "genmeta-doctor",
    "genmeta-identity",
    "genmeta-proxy",
    "xtask",
]

[workspace.dependencies]
# async
futures = "0.3"
daemonize = "0.5"
tokio = { version = "1", features = ["full"] }

# cli
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
indicatif = "0.18"
whoami = "2"

# network
h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint", version = "0.2.0" }
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
urlencoding = "2"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "gzip",
    "json",
    "zstd",
    "rustls-no-provider",
] }

# security
rankey = { git = "https://github.com/genmeta/rankey.git", branch = "master", version = "0.2.1" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
x509-parser = "0.18"
p384 = "0.14.0-rc.7"
pkcs8 = { version = "=0.11.0-rc.11", features = ["pem"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tracing
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-indicatif = { version = "0.3" }

# utils
base64 = "0.22"
bytes = "1"
crossterm = { version = "0.29" }
dirs = { version = "6" }
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
snafu = "0.9"
socket2 = "0.6"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
    "deflate",
    "zstd",
] }

# workspace
dhttp-access = { git = "https://github.com/genmeta/dhttp.git", branch = "main", version = "0.1.0" }
genmeta-access = { path = "genmeta-access" }
dhttp = { git = "https://github.com/genmeta/dhttp.git", branch = "main", version = "0.1.0" }
dhttp-home = { git = "https://github.com/genmeta/dhttp.git", branch = "main", version = "0.1.0" }
dhttp-identity = { git = "https://github.com/genmeta/dhttp.git", branch = "main", version = "0.1.0" }
genmeta-curl = { path = "genmeta-curl" }
genmeta-discover = { path = "genmeta-discover" }
genmeta-doctor = { path = "genmeta-doctor" }
genmeta-identity = { path = "genmeta-identity" }
genmeta-nat = { path = "genmeta-nat" }
genmeta-nslookup = { path = "genmeta-nslookup" }
genmeta-ssh = { path = "genmeta-ssh" }
genmeta-proxy = { path = "genmeta-proxy" }

# ssh
dssh = { git = "https://github.com/genmeta/dssh.git", branch = "endpoint", version = "0.2.0", features = [
    "config",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
