
[workspace]
resolver = "3"
members = [
    "genmeta",
    "genmeta-access",
    "genmeta-curl",
    "genmeta-ssh",
    "genmeta-nslookup",
    "genmeta-discover",
    "genmeta-nat",
    "genmeta-doctor",
    "genmeta-identity",
    "genmeta-proxy",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/genmeta/gmutils"
homepage = "https://www.dhttp.net"
readme = "README.md"

[workspace.dependencies]
# async
futures = "0.3"
daemonize = "0.5"
tokio = { version = "1", features = ["full"] }

# cli
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
indicatif = "0.18"
whoami = "2"

# network
h3x = "0.4.0"
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
urlencoding = "2"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "gzip",
    "json",
    "zstd",
    "rustls-no-provider",
] }

# security
rankey = "0.2.1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
x509-parser = "0.18"
p384 = "0.14.0-rc.7"
pkcs8 = { version = "=0.11.0-rc.11", features = ["pem"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tracing
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-indicatif = { version = "0.3" }

# utils
base64 = "0.22"
bytes = "1"
crossterm = { version = "0.29" }
dirs = { version = "6" }
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
snafu = "0.9"
socket2 = "0.6"
time = "0.3"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
    "deflate",
    "zstd",
] }

# workspace
dhttp-access = "0.2.0"
genmeta-access = { path = "genmeta-access", version = "0.2.0" }
dhttp = "0.2.0"
genmeta-curl = { path = "genmeta-curl", version = "0.5.0" }
genmeta-discover = { path = "genmeta-discover", version = "0.3.0" }
genmeta-doctor = { path = "genmeta-doctor", version = "0.3.0" }
genmeta-identity = { path = "genmeta-identity", version = "0.2.0" }
genmeta-nat = { path = "genmeta-nat", version = "0.3.0" }
genmeta-nslookup = { path = "genmeta-nslookup", version = "0.3.0" }
genmeta-ssh = { path = "genmeta-ssh", version = "0.6.0" }
genmeta-proxy = { path = "genmeta-proxy", version = "0.2.0" }

# DShell
dshell = { version = "0.4.0", features = [
    "config",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
