[package]
name = "genmeta-access"
description = "access control rule management"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
dhttp-access = { workspace = true, features = ["cli", "orm", "migration"] }
dhttp-config = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
sea-orm-migration = { workspace = true, features = ["sqlx-sqlite"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
