[package]
name = "genmeta-access"
description = "access control rule management"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "access", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { workspace = true }
dhttp = { workspace = true }
dhttp-access = { workspace = true, features = ["cli", "orm", "migration"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
