[package]
name = "genmeta-common"
description = "common code for genmeta binary utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
# feature bind, id and dns
snafu = { workspace = true, optional = true }

# feature bind, dns and id
clap = { workspace = true, optional = true }

#feature http and id
http = { workspace = true, optional = true }

# feature dns and id
gmdns = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
genmeta-home = { workspace = true, optional = true }

# feature h3-client
bon = { workspace = true, optional = true }

# feature bind 
derive_more = { workspace = true, optional = true, features = [
    "deref",
    "deref_mut",
    "from",
    "into",
] }
either = { workspace = true, optional = true }
globset = { workspace = true, optional = true }
h3x = { workspace = true, optional = true }
peg = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt"] }
tokio-util = { workspace = true, optional = true, features = ["rt"] }

[features]
# dev
default = ["dns", "id"]
bind = [
    "dep:clap",
    "dep:derive_more",
    "dep:either",
    "dep:futures",
    "dep:globset",
    "dep:http",
    "dep:h3x",
    "dep:peg",
    "dep:snafu",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tracing",
]
id = ["dep:snafu", "dep:clap", "dep:genmeta-home", "dep:http", "dep:tracing"]
dns = ["bind", "dep:clap", "dep:gmdns", "dep:genmeta-home", "dep:tracing"]
h3-client = ["dns", "dep:bon"]
