[package]
name = "genmeta-common"
description = "common code for genmeta binary utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
# feature bind, id and dns
snafu = { workspace = true, optional = true }

# feature bind, dns and id
clap = { workspace = true, optional = true }

#feature http and id
http = { workspace = true, optional = true }

# feature dns and id
gmdns = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
dhttp-home = { workspace = true, optional = true }

# feature h3-client
bon = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

# feature dns and h3-client
h3x = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt"] }
tokio-util = { workspace = true, optional = true, features = ["rt"] }

[features]
# dev
default = ["dns", "id"]
error = ["dep:snafu"]
id = ["dep:snafu", "dep:clap", "dep:dhttp-home", "dep:http", "dep:tracing"]
dns = [
    "dep:clap",
    "dep:futures",
    "dep:gmdns",
    "dep:dhttp-home",
    "dep:h3x",
    "dep:http",
    "dep:snafu",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tracing",
]
h3-client = ["dns", "dep:bon", "dep:rustls"]
