[package]
name = "genmeta-curl"
description = "curl-like DHTTP/3 client"
version = "0.3.2"
edition = "2024"

[dependencies]
async-compression = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
genmeta-common = { workspace = true, features = ["h3-client", "id"] }
genmeta-home = { workspace = true }
h3x = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
url = "2"
