[package]
name = "genmeta-curl"
description = "curl-like DHTTP/3 client"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "http3", "client", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
async-compression = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dhttp = { workspace = true }
http = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
url = "2"
