[package]
name = "genmeta-discover"
description = "mdns discover services"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
genmeta-common = { workspace = true }
qdns = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
