[package]
name = "genmeta-discover"
description = "mdns discover services"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
gmdns = { workspace = true }
genmeta-common = { workspace = true, features = ["dns"] }
h3x = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
