[package]
name = "genmeta-doctor"
description = "diagnosing and fixing environment issues"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
genmeta-nat = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
