[package]
name = "genmeta-doctor"
description = "diagnosing and fixing environment issues"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "diagnostics", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { workspace = true }
genmeta-nat = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
