[package]
name = "genmeta-identity"
description = "managing identities for genmeta network"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
inquire-derive = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
tracing-indicatif = { workspace = true, optional = true }

base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
genmeta-common = { workspace = true }
genmeta-home = { workspace = true }
rankey = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x509-parser = { workspace = true }

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:inquire",
    "dep:inquire-derive",
    "dep:indicatif",
    "dep:tracing-indicatif",
]
