[package]
name = "genmeta-identity"
description = "managing identities for genmeta network"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { workspace = true, optional = true }
inquire = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
tracing-indicatif = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
rankey = { workspace = true }
p384 = { workspace = true }
pkcs8 = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
urlencoding = { workspace = true }
whoami = { workspace = true, optional = true }
x509-parser = { workspace = true }

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:inquire",
    "dep:indicatif",
    "dep:tracing-indicatif",
    "dep:crossterm",
    "dep:whoami",
]
