[package]
name = "genmeta-nat"
description = "Diagnose network and environment issues"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
genmeta-common = { path = "../genmeta-common", features = ["h3-client", "id"] }
genmeta-home = { workspace = true }
gmdns = { workspace = true }
h3x = { workspace = true }
qinterface = { workspace = true }
qtraversal = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
