[package]
name = "genmeta-nat"
description = "Diagnose network and environment issues"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
