[package]
name = "genmeta-nat"
description = "Diagnose network and environment issues"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "nat", "stun", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
