[package]
name = "genmeta-nslookup"
description = "resolve domain names"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
genmeta-common = { workspace = true, features = ["h3-client", "id"] }
dhttp-home = { workspace = true }
gmdns = { workspace = true }
h3x = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# console-subscriber = { workspace = true }
