[package]
name = "genmeta-nslookup"
description = "resolve domain names"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# console-subscriber = { workspace = true }
