[package]
name = "genmeta-nslookup"
description = "resolve domain names"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "dns", "resolver", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# console-subscriber = { workspace = true }
