[package]
name = "genmeta-profile"
description = "Diagnostic Identity Profile"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
genmeta-common = { workspace = true }
ssh-config = { workspace = true, features = ["genmeta"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
