[package]
name = "genmeta-profile"
description = "Diagnostic Identity Profile"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
genmeta-common = { workspace = true, features = ["error", "id"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
