[package]
name = "genmeta-profile"
description = "Diagnose identity profile"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
genmeta-common = { workspace = true, features = ["error", "identity"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
