[package]
name = "genmeta-proxy"
description = "forward proxy routing .genmeta.net requests over DHTTP/3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
genmeta-common = { workspace = true, features = ["bind", "dns", "id"] }
genmeta-home = { workspace = true }
h3x = { workspace = true }
http = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
daemonize = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[features]
default = []
