[package]
name = "genmeta-proxy"
description = "forward proxy routing .dhttp.net requests over DHTTP/3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
dhttp = { workspace = true }
http = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }

[target.'cfg(unix)'.dependencies]
daemonize = { workspace = true }

[features]
default = []
