[package]
name = "genmeta-proxy"
description = "forward proxy routing .dhttp.net requests over DHTTP/3"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "proxy", "http3", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { workspace = true }
dhttp = { workspace = true }
http = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }

[target.'cfg(unix)'.dependencies]
daemonize = { workspace = true }

[features]
default = []
