[package]
name = "genmeta-request"
description = "request for the uri"
version = "0.0.1"
edition = "2024"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
gm-quic = { workspace = true }
h3 = { workspace = true }
h3-shim = { workspace = true }
http = { workspace = true }
qconnection = { workspace = true }
qdns = { workspace = true }
qtraversal = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
