[package]
name = "genmeta-ssh"
description = "ssh3 client"
version = "0.5.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
genmeta-common = { workspace = true, features = ["h3-client", "id"] }
dhttp-home = { workspace = true }
genmeta-ssh-core = { workspace = true, features = ["cli", "client", "config"] }
http = { workspace = true }
http-body-util = { workspace = true }
h3x = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "rt"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
whoami = { workspace = true }
