[package]
name = "genmeta-ssh"
description = "ssh3 client"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
dssh = { workspace = true, features = ["cli", "client", "config"] }
http = { workspace = true }
h3x = { workspace = true, features = ["webtransport"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
whoami = { workspace = true }
