[package]
name = "genmeta-ssh"
description = "DShell client"
version = "0.6.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "dshell", "ssh", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
dhttp = { workspace = true }
dshell = { workspace = true, features = ["cli", "client", "config"] }
http = { workspace = true }
h3x = { workspace = true, features = ["webtransport"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
whoami = { workspace = true }
