[package]
name = "genmeta-ssh3"
description = "ssh3 client"
version = "0.4.1"
edition = "2024"

[dependencies]
bytes = { workspace = true, features = ["serde"] }
clap = { workspace = true }
futures = { workspace = true }
genmeta-common = { workspace = true, features = ["identity"] }
ssh-config = { workspace = true, features = ["openssh"] }
genmeta-ssh3-client = { workspace = true }
http = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
whoami = { workspace = true }

# console-subscriber = { workspace = true }
