[package]
name = "genmeta-ssh3"
description = "ssh3 client"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
genmeta-common = { workspace = true, features = ["bind", "dns", "id"] }
genmeta-home = { workspace = true }
genmeta-ssh = { workspace = true, features = ["cli"] }
http = { workspace = true }
h3x = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "rt"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
whoami = { workspace = true }
qevent = { workspace = true }
