[package]
name = "genmeta"
homepage = "https://www.dhttp.net"
description = "Genmeta Binary Utilities"
license = "Shareware"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
genmeta-access = { workspace = true }
genmeta-curl = { workspace = true }
genmeta-discover = { workspace = true }
genmeta-doctor = { workspace = true }
genmeta-identity = { workspace = true }
genmeta-nslookup = { workspace = true }
genmeta-ssh = { workspace = true }
genmeta-proxy = { workspace = true }
snafu = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
