[package]
name = "genmeta"
description = "Genmeta Binary Utilities"
version = "0.6.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["genmeta", "dhttp", "cli", "launcher"]
categories = ["command-line-utilities"]

[dependencies]
clap = { workspace = true }
genmeta-access = { workspace = true }
genmeta-curl = { workspace = true }
genmeta-discover = { workspace = true }
genmeta-doctor = { workspace = true }
genmeta-identity = { workspace = true }
genmeta-nslookup = { workspace = true }
genmeta-ssh = { workspace = true }
genmeta-proxy = { workspace = true }
snafu = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
