[package]
name = "ssh-config"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { workspace = true, features = [
    "from",
    "into",
    "as_ref",
    "deref",
    "deref_mut",
] }
dirs = { workspace = true, optional = true }
http = { workspace = true, optional = true }
peg = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
rustls = { workspace = true, default-features = false, optional = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs"], optional = true }
tracing = { workspace = true }

[features]
default = ["openssh", "genmeta"]
openssh = ["dep:dirs", "dep:http", "dep:rustls", "dep:tokio"]
genmeta = ["dep:dirs"]
