[package]
name = "ssh3-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["display", "debug"] }
either = { workspace = true }
futures = { workspace = true }
genmeta-common = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
pin-project-lite = { workspace = true }
socks5-proto = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "rt"] }
tracing = { workspace = true }
