[package]
name = "xtask"
description = "release packaging tasks for gmutils"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
bollard = "0.21"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive", "env"] }
debversion = "0.5.2"
flate2 = "1"
genmeta-xtask-release = { git = "https://github.com/genmeta/genmeta-xtask-release.git", version = "0.1.0" }
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.9"
tar = "0.4"
tempfile = "3"
toml = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
rpm-version = "0.5.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(xtask_s3_publish)'.dependencies]
aws-credential-types = "1"
# Keep default `default-https-client` disabled. It pulls aws-lc, and aws-lc-sys
# fails to assemble on i686-pc-windows-msvc under clang-cl during release
# cross-builds. Enable only the rustls/ring-backed features used by S3 publish.
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rt-tokio",
    "rustls",
    "sigv4a",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(xtask_s3_publish)'] }
