[package]
name = "xtask"
description = "release packaging tasks for gmutils"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
genmeta-xtask-release = { git = "https://github.com/genmeta/genmeta-xtask-release.git", version = "0.1.0" }
snafu = "0.9"
